# regex-dictionary-tui-rs

./: Cargo.toml  README.md  devenv.nix  devenv.yaml
src/: main.rs
