cargo-features = ["edition2024"]

[package]
name = "regex-dictionary-tui-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
iocraft = "0.7.9"
once_cell = "1.21.3"
rayon = "1.10.0"
regex = "1.11.1"
smol = "2.0.2"

# In your project's .cargo/config.toml file
[target.x86_64-unknown-linux-gnu] # Or your specific target triple
rustflags = [
  "-C", "target-feature=+crt-static",
  "-C", "link-arg=-static",
]